<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
    >
    <EditText
        android:id="@+id/http_url"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/et_normal_bg"
        android:hint="输入正确的服务地址 如： http://ip:port"
        android:drawablePadding="4dp"
        android:padding="4dp"
        android:maxLines="1"
        android:singleLine="true"/>
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/et_normal_bg"
                android:hint="@string/prompt_email"
                android:drawablePadding="4dp"
                android:padding="4dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"  android:padding="4dp"
                android:background="@drawable/et_normal_bg"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <com.unstoppable.submitbuttonview.SubmitButton
                android:id="@+id/submitbutton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:buttonText="登录"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
